@@ -1,6 +1,5 @@
 package com.yandex.ydb.jdbc.settings;
 
-import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.Optional;
@@ -16,7 +15,7 @@ class YdbPropertiesTest {
     @Test
     void resolveFilePath() throws YdbConfigurationException, MalformedURLException {
         Optional<URL> url = YdbProperties.resolvePath("file:/root.file");
-        assertEquals(Optional.of(new File("/root.file").toURI().toURL()), url);
+        assertEquals(Optional.of(new URL("file:/root.file")), url);
     }
 
     @Test
@@ -31,13 +30,13 @@ class YdbPropertiesTest {
     void resolveFilePathFromHome() throws YdbConfigurationException, MalformedURLException {
         Optional<URL> url = YdbProperties.resolvePath("file:~/home.file");
         String home = System.getProperty("user.home");
-        assertEquals(Optional.of(new File(home + "/home.file").toURI().toURL()), url);
+        assertEquals(Optional.of(new URL("file:" + home + "/home.file")), url);
     }
 
     @Test
     void resolveFilePathFromHomePure() throws YdbConfigurationException, MalformedURLException {
         Optional<URL> url = YdbProperties.resolvePath("~/home.file");
         String home = System.getProperty("user.home");
-        assertEquals(Optional.of(new File(home + "/home.file").toURI().toURL()), url);
+        assertEquals(Optional.of(new URL("file:" + home + "/home.file")), url);
     }
 }
